radix-transactions/tests/assets/manifest_parser_error_invalid_number_of_values_2.rtm
CALL_METHOD
    Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
    "lock_fee"
;
CALL_METHOD
    Address("component_sim1cptxxxxxxxxxfaucetxxxxxxxxx000527798379xxxxxxxxxhkrefh")
    "some_method"
    Some("radix", "is", "fun")
    Enum<0u8>()
;
